switch branding to bovids

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,12 +2,11 @@
   <section id="one">
     <div class="container">
       <header class="major">
-        <h2>Songs are awesome</h2>
+        <h2>Bovid Diversity</h2>
         <p></p>
-        <p>We are a community of people who love playing, singing, and writing great songs.
-        This site is a free resource for great songs with no advertisements.
-        We've got a <a href="#two">growing list of songs</a> already.
-        You can submit your own songs by <a href="#three">contacting us directly.</a></p>
+        <p>This is a simple website, dedicated to documenting bovid diversity.
+        We've got a <a href="#two">growing list of bovids</a> already.
+        Feel free to <a href="#three">get in touch with comments or questions.</a></p>
       </header>
     </div>
   </section>
