--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
     <div class="container">
       <header class="major">
         <h2>Contact Us</h2>
-        <form method="post" action="//formspree.io/submitanawesomesong@gmail.com">
+        <form method="post" action="//formspree.io/wabarr@gmail.com">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="_replyto" id="email" placeholder="Email" /></div>
