--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
 				<div id="main">
 				<!-- Main -->
 						{% include about.html %}
-						{% include songs.html %}
+						{% include bovids.html %}
 						{% include contact.html %}
 				</div>
 				<!-- Footer -->
