--- a/_includes/alt-nav.html
+++ b/_includes/alt-nav.html
@@ -7,7 +7,7 @@
   <nav id="nav">
     <ul>
       <li><a href="{{site.base_url}}/#one">Home</a></li>
-      <li><a href="{{site.base_url}}/#two" class="active">Songs</a></li>
+      <li><a href="{{site.base_url}}/#two" class="active">Bovids</a></li>
       <li><a href="{{site.base_url}}/#three">Contact</a></li>
     </ul>
   </nav>
