--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <section id="footer">
   <div class="container">
     <ul class="copyright">
-      <li>Site Design: <a href="http://html5up.net">HTML5 UP</a></li>
+      <li>&copy; W. Andrew Barr. All rights reserved.</li><li>Site Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
   </div>
 </section>
