--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
   <nav id="nav">
     <ul>
       <li><a href="#one" class="active">Home</a></li>
-      <li><a href="#two">Songs</a></li>
+      <li><a href="#two">Bovids</a></li>
       <li><a href="#three">Contact</a></li>
     </ul>
   </nav>
