--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1574,7 +1574,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #3759b4 !important;
 		}
 
 	strong, b {
@@ -1726,7 +1726,7 @@
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #3759b4;
 		font-size: 3.5em;
 	}
 
@@ -1789,7 +1789,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #3759b4;
 		}
 
 	.select-wrapper {
@@ -1899,7 +1899,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #3759b4;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2092,7 +2092,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #4acaa8;
+					background: #3759b4;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2379,7 +2379,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #4acaa8;
+			background-color: #3759b4;
 			color: #ffffff !important;
 		}
 
@@ -2449,8 +2449,8 @@
 /* Header */
 
 	#header {
-		background: #4acaa8;
-		color: #d1f1e9;
+		background: #3759b4;
+		color: #fff;
 		height: 100%;
 		position: fixed;
 		text-align: center;
@@ -2468,11 +2468,11 @@
 			}
 
 		#header header p {
-			color: #b6e9dc;
+			color: #f7f7f7;
 		}
 
 		#header a {
-			color: #d1f1e9;
+			color: #fff;
 		}
 
 			#header a:hover {
@@ -2495,7 +2495,7 @@
 			}
 
 			#header > header p {
-				color: #d1f1e9;
+				color: #fff;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2513,7 +2513,7 @@
 			}
 
 				#header > footer .icons li a {
-					color: #b6e9dc;
+					color: #f7f7f7;
 				}
 
 		#header > nav ul {
@@ -2523,7 +2523,6 @@
 		}
 
 			#header > nav ul li {
-				border-top: solid 2px #5ccfb0;
 				display: block;
 				padding: 0;
 			}
@@ -2542,7 +2541,9 @@
 
 					#header > nav ul li a.active {
 						background: #fff;
-						color: #4acaa8 !important;
+						border-left: solid 3px #3759b4;
+						border-right: solid 3px #3759b4;
+						color: #3759b4 !important;
 					}
 
 				#header > nav ul li:first-child {
@@ -2821,7 +2822,7 @@
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #3759b4;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
