--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,12 +11,6 @@
     </ul>
   </nav>
   <footer>
-    <ul class="icons">
-      <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-      <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-      <!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-      <!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
-      <li><a href="#three" class="icon fa-envelope"><span class="label">Email</span></a></li>
-    </ul>
+    {% include icons.html %}
   </footer>
 </section>
