move search onto main page

--- a/_includes/alt-nav.html
+++ b/_includes/alt-nav.html
@@ -7,8 +7,9 @@
   <nav id="nav">
     <ul>
       <li><a href="{{site.base_url}}/#one">Home</a></li>
-      <li><a href="{{site.base_url}}/#two" class="active">Bovids</a></li>
-      <li><a href="{{site.base_url}}/#three">Contact</a></li>
+      <li><a href="{{site.base_url}}/#two">Search</a></li>
+      <li><a href="{{site.base_url}}/#three">Browse</a></li>
+      <li><a href="{{site.base_url}}/#four">Contact</a></li>
     </ul>
   </nav>
   <footer>
