--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,8 +6,9 @@
   <nav id="nav">
     <ul>
       <li><a href="#one" class="active">Home</a></li>
-      <li><a href="#two">Bovids</a></li>
-      <li><a href="#three">Contact</a></li>
+      <li><a href="#two">Search</a></li>
+      <li><a href="#three">Browse</a></li>
+      <li><a href="#four">Contact</a></li>
     </ul>
   </nav>
   <footer>
