--- a/_includes/bovids.html
+++ b/_includes/bovids.html
@@ -1,5 +1,5 @@
 <!-- section two, included in the home.html layout -->
-	<section id="two">
+	<section id="three">
 		<div class="container">
 			<header class="major">
 				<h2>Bovids</h2>
