--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 <!-- section three, included in the home.html layout -->
-  <section id="three">
+  <section id="four">
     <div class="container">
       <header class="major">
         <h2>Contact Us</h2>
