change the file name for bovid include

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
 				<!-- Main -->
 						{% include about.html %}
 						{% include search.html %}
-						{% include bovids.html %}
+						{% include bovid-list.html %}
 						{% include contact.html %}
 				</div>
 				<!-- Footer -->
