--- a/_includes/bovid-list.html
+++ b/_includes/bovid-list.html
@@ -12,13 +12,32 @@
 					{% assign sortedcategories = categories | split:' ' | sort %}
 
 					{% for category in sortedcategories %}
-	  				<h3 id="{{ category }}">{{ category | replace:'_',' ' | capitalize }}</h3>
-	  				<ul>
-	  				{% for post in site.categories[category] %}
-	    				<li><a href="{{ post.url }}">{{ post.commonname | capitalize }}</a></li>
-						{% endfor %}
-						</ul>
+
+						<h3 id="{{ category }}">{{ category | replace:'_',' ' | capitalize }}</h3>
+	  				<div class="row tribeContainer">
+							<div class="3u">
+								<ul class="tribe">
+		  						{% for post in site.categories[category] %}
+		    						<li><a href="{{ post.url }}">{{ post.commonname | capitalize }}</a></li>
+									{% endfor %}
+								</ul>
+							</div>
+							<div class="3u">
+								<a class="icon fa-plus toggleTribe"><span class="label">tribe</span></a>
+							</div>
+							<div class="6u"></div>
+						</div>
 					{% endfor %}
 			</header>
 		</div>
 	</section>
+
+	<script>
+		document.addEventListener("DOMContentLoaded", function(event) {
+			$(".tribe").hide()
+			$(".toggleTribe").click(function(){
+				$(this).toggleClass("fa-minus fa-plus")
+				$(this).parents(".tribeContainer").find(".tribe").toggle();
+			});
+		});
+	</script>
