move search to sidebar

--- a/_includes/alt-nav.html
+++ b/_includes/alt-nav.html
@@ -7,11 +7,12 @@
   <nav id="nav">
     <ul>
       <li><a href="{{site.base_url}}/#one">Home</a></li>
-      <li><a href="{{site.base_url}}/#two">Search</a></li>
       <li><a href="{{site.base_url}}/#three">Browse</a></li>
       <li><a href="{{site.base_url}}/#four">Contact</a></li>
     </ul>
+    {% include search.html %}
   </nav>
+
   <footer>
     {% include icons.html %}
   </footer>
