--- a/_includes/bovid-list.html
+++ b/_includes/bovid-list.html
@@ -1,5 +1,5 @@
 <!-- section two, included in the home.html layout -->
-	<section id="three">
+	<section id="two">
 		<div class="container">
 			<header class="major">
 				<h2>Bovids</h2>
