--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,11 +6,13 @@
   <nav id="nav">
     <ul>
       <li><a href="#one" class="active">Home</a></li>
-      <li><a href="#two">Search</a></li>
-      <li><a href="#three">Browse</a></li>
-      <li><a href="#four">Contact</a></li>
+      <li><a href="#two">Browse</a></li>
+      <li><a href="#three">Contact</a></li>
     </ul>
+    {% include search.html %}
   </nav>
+
+
   <footer>
     {% include icons.html %}
   </footer>
