--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,22 +2,27 @@
   <section id="two">
     <div class="container">
       <header class="major">
+        <div class="row">
+          <div class="12u">
+            <input type="text" placeholder="Search" name="bovid" id="autocomplete"/>
 
-        <h2>Search</h2>
-        <input type="text" name="bovid" id="autocomplete"/>
-
-        <div class="autocomplete-suggestions">
-            <div class="autocomplete-suggestion"></div>
-            <div class="autocomplete-suggestion"></div>
-            <div class="autocomplete-suggestion"></div>
-            <div class="autocomplete-suggestion"></div>
+            <div class="autocomplete-suggestions">
+                <div class="autocomplete-suggestion"></div>
+            </div>
+          </div>
         </div>
 
         <script>
           document.addEventListener("DOMContentLoaded", function(event) {
+            $(".autocomplete-suggestions").hide();
+            $("#autocomplete").focusin( function() {
+              $(".autocomplete-suggestions").show()
+            });
+
+            /*load autocomplete JS*/
             $("#scripts").after("<script src='/assets/js/jquery.autocomplete.js' type='text/javascript/'><//script>");
 
-            $.getJSON("search.json",  setupAutoComplete)
+            $.getJSON("{{site.base_url}}/search.json",  setupAutoComplete)
 
             function setupAutoComplete( data ) {
               $('#autocomplete').autocomplete({
