--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,25 +1,15 @@
-<!-- section two, included in the home.html layout -->
-  <section id="two">
-    <div class="container">
-      <header class="major">
-        <div class="row">
-          <div class="12u">
+
             <input type="text" placeholder="Search" name="bovid" id="autocomplete"/>
 
             <div class="autocomplete-suggestions">
                 <div class="autocomplete-suggestion"></div>
             </div>
-          </div>
-        </div>
+
 
         <script>
           document.addEventListener("DOMContentLoaded", function(event) {
-            $(".autocomplete-suggestions").hide();
-            $("#autocomplete").focusin( function() {
-              $(".autocomplete-suggestions").show()
-            });
 
-            /*load autocomplete JS*/
+            // load autocomplete JS
             $("#scripts").after("<script src='/assets/js/jquery.autocomplete.js' type='text/javascript/'><//script>");
 
             $.getJSON("{{site.base_url}}/search.json",  setupAutoComplete)
@@ -36,6 +26,3 @@
 
           });
         </script>
-      </header>
-    </div>
-  </section>
