--- a/assets/css/tweaks.css
+++ b/assets/css/tweaks.css
@@ -1,9 +1,13 @@
-.autocomplete-suggestions { border: 1px; border-radius: 2px; solid #999; background: #fff; margin:2px; overflow: auto; }
+.autocomplete-suggestions { border-radius: 2px; solid #999; background: #fff; margin:3px; overflow: auto; display:none;}
 .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
 .autocomplete-selected { background: #F0F0F0; }
 .autocomplete-suggestions strong { font-weight: normal; }
 .autocomplete-group { padding: 2px 5px; }
 .autocomplete-group strong { display: block; border-bottom: 1px solid #fff; }
+
+#autocomplete {
+  margin: 3px;
+}
 
 ul {
   list-style-type: none;
