move search to AJAX

--- a/_includes/alt-nav.html
+++ b/_includes/alt-nav.html
@@ -6,11 +6,11 @@
   </header>
   <nav id="nav">
     <ul>
-      <li><a href="{{site.base_url}}/#one">Home</a></li>
-      <li><a href="{{site.base_url}}/#three">Browse</a></li>
-      <li><a href="{{site.base_url}}/#four">Contact</a></li>
+      <li><a href="#one" class="active">Home</a></li>
+      <li><a href="#two">Search</a></li>
+      <li><a href="#three">Browse</a></li>
+      <li><a href="#four">Contact</a></li>
     </ul>
-    {% include search.html %}
   </nav>
 
   <footer>
