--- a/_includes/bovid-list.html
+++ b/_includes/bovid-list.html
@@ -1,8 +1,8 @@
 <!-- section two, included in the home.html layout -->
-	<section id="two">
+	<section id="three">
 		<div class="container">
 			<header class="major">
-				<h2>Bovids</h2>
+				<h2>Browse Bovids</h2>
 				{% capture categories %}
 	  				{% for category in site.categories %}
 	    				{{ category[0] }}
