--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,7 @@
 				<div id="main">
 				<!-- Main -->
 						{% include about.html %}
+						{% include search.html %}
 						{% include bovid-list.html %}
 						{% include contact.html %}
 				</div>
