--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,6 +2,8 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'bovids';
+    var disqus_identifier = '{{ page.url }}' ;
+    var disqus_url = '{{ site.base_url }}{{ page.url }}' ;
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
