--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,4 +6,7 @@
   <script src="{{site.base_url}}/assets/js/util.js"></script>
   <!--[if lte IE 8]><script src="{{site.base_url}}/assets/js/ie/respond.min.js"></script><![endif]-->
   <script src="{{site.base_url}}/assets/js/main.js"></script>
+  <script src='{{site.base_url}}/assets/js/jquery.autocomplete.js'></script>
+
+  </script>>
 </div>
