--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,21 +1,21 @@
 <section id="two">
   <div class="container">
     <header class="major">
+      <div class="row">
+        <div class="12u">
             <input type="text" placeholder="Search" name="bovid" id="autocomplete"/>
 
             <div class="autocomplete-suggestions">
                 <div class="autocomplete-suggestion"></div>
             </div>
             <div id="searchresult"></div>
+        </div>
+      </div>
     </header>
   </div>
 </section>
         <script>
           document.addEventListener("DOMContentLoaded", function(event) {
-
-            // load autocomplete JS
-            $("#scripts").after("<script src='/assets/js/jquery.autocomplete.js' type='text/javascript/'><//script>");
-
             $.getJSON("{{site.base_url}}/search.json",  setupAutoComplete)
 
             function setupAutoComplete( data ) {
@@ -23,6 +23,7 @@
                 lookup: data,
                 onSelect: function (suggestion) {
                     $("#searchresult").load(suggestion.url);
+                    $("#autocomplete").val(null);
                   }
                 });
               };
