--- a/_includes/bovid-detail.html
+++ b/_includes/bovid-detail.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row">
-<div class="12u"><h3>{{page.binomial | replace:"_"," " }}</h3></div>
+<div class="12u"><h3><i>{{page.binomial | replace:"_"," " }}</i></h3></div>
 </div>
 
 <div class="row">
