--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -3,5 +3,5 @@
   <!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
   <!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
   <!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
-  <li><a href="#three" class="icon fa-envelope"><span class="label">Email</span></a></li>
+  <li><a href="#four" class="icon fa-envelope"><span class="label">Email</span></a></li>
 </ul>
