--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,8 +5,8 @@
         <h2>Bovid Diversity</h2>
         <p></p>
         <p>This is a simple website, dedicated to documenting bovid diversity.
-        We've got a <a href="#two">growing list of bovids</a> already.
-        Feel free to <a href="#three">get in touch with comments or questions.</a></p>
+        We've got a <a href="#three">growing list of bovids</a> already.
+        Feel free to <a href="#four">get in touch with comments or questions.</a></p>
       </header>
     </div>
   </section>
